# covid19

./: .gitignore  README.md  docker-compose.yaml
covid19/: covid19.Dockerfile  db.sqlite3  init-django.sh  pyproject.toml  sql.cfn  start.sh.template
covid19/covid19/: settings.py  urls.py
covid19/covid19/static/: histogram.html  questionnaire.html
covid19/covid19/static/js/: bulma-steps.min.js
covid19/dashboard/: urls.py  views.py
covid19/docker/: inspec.Dockerfile  static.Dockerfile  wait-for  web-docker-entrypoint.sh  web.Dockerfile
covid19/nginx/: nginx.conf  static.conf
covid19/questionadmin/: admin.py  forms.py  models.py  settings.py  urls.py  views.py
covid19/questionadmin/fixtures/: alpha.json
covid19/questionadmin/migrations/: 0001_initial.py  0002_auto_20200315_0350.py  0002_auto_20200319_0704.py  0003_auto_20200315_0352.py  0004_auto_20200315_0554.py
covid19/questionadmin/templates/: base.html  bye-page.html  dashboard_participant.html  dashboard_table.html  feedback.html  front-page.html  index.html
covid19/questionadmin/templates/dashboard/: dashboard.html  dashboard_gallery.html  dashboard_list.html  histogram.html
covid19/questionadmin/templates/questionadmin/: answer_list.html  feedback.html  question_detail.html  question_list.html
covid19/questionadmin/templates/registration/: login.html
covid19/requirements/: apt.txt  pip.txt
covid19/static/: front-page.html  index.html  questionnaire.html  survey_response.html
covid19/static/css/: bulma.css  bulma.min.css  question_list.css  site.css
covid19/static/js/: covid.js
(+3 files in other folders)
