[tool.poetry]
name = "covid19"
version = "0.1.0"
description = "covid19 survey app"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "2.2.10"
django_countries = "^6.1"
django_tables2 = "^2.2.1"
python-dateutil = "^2.8.1"
pytz = "^2019.3"
mysqlclient = "1.4.6"
pymysql = "^0.9.3"
gunicorn = "20.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
